# numpy-deep-dive

./: .gitignore  LICENSE  NOTES.md  README.md  pyproject.toml
src/numpy_deep_dive/: __init__.py  __main__.py  copy_view.py  creation.py  data_loading.py  indexing.py  io_examples.py  memory_perf.py
