[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "numpy-deep-dive"
version = "0.1.0"
description = "NumPy Deep Dive: categorized demos + reliable mini-benchmarks"
requires-python = ">=3.9"
dependencies = ["numpy>=1.23"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
